# src/main/java/com/fiap/ms/restaurante/infraestrutura/dataproviders/database/entities/RestauranteEntity.java
@@ -1,11 +1,6 @@
 package com.fiap.ms.restaurante.infraestrutura.dataproviders.database.entities;
 
-import jakarta.persistence.Embedded;
-import jakarta.persistence.Entity;
-import jakarta.persistence.GeneratedValue;
-import jakarta.persistence.GenerationType;
-import jakarta.persistence.Id;
-import jakarta.persistence.Table;
+import jakarta.persistence.*;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -28,19 +23,16 @@ public class RestauranteEntity {
     @Embedded
     private EnderecoEntity endereco;
 
-//    @ManyToOne(fetch = FetchType.LAZY)
-//    @JoinColumn(name = "tipo_cozinha_id")
-    //TODO MUDAR PARA LONG E FAZER O RELACIONAMENTO
-    //private TipoCozinhaEntity tipoCozinha;
-    private String tipoCozinha;
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "tipo_cozinha_id")
+    private TipoCozinhaEntity tipoCozinha;
 
     private String horarioFuncionamento;
 
-//    @Column(name = "usuario_id")
+    @Column(name = "usuario_id")
     private Long usuarioId;
 
-    //TODO MUDAR ATE O SWAGGER E VOLTAR UM LIST
-    // CRIAR DOMAIN E DTO
-    // SE NECESSARIO AJUSTAR OS MAPPERS
-    //private List<ItemCardapioEntity> itemCardapios;
+    @JoinColumn(name = "item_cardapio")
+    @OneToMany(mappedBy = "restaurante", fetch = FetchType.LAZY)
+    List<ItemCardapioEntity> itemCardapio;
 }
