# src/main/java/com/fiap/ms/restaurante/infraestrutura/dataproviders/database/mapper/ItemCardapioEntityMapper.java
@@ -3,6 +3,7 @@ package com.fiap.ms.restaurante.infraestrutura.dataproviders.database.mapper;
 import com.fiap.ms.restaurante.domain.model.ItemCardapioDomain;
 import com.fiap.ms.restaurante.infraestrutura.dataproviders.database.entities.ItemCardapioEntity;
 import org.mapstruct.Mapper;
+import org.mapstruct.Mapping;
 import org.mapstruct.ReportingPolicy;
 import org.mapstruct.factory.Mappers;
 
@@ -11,7 +12,9 @@ public interface ItemCardapioEntityMapper {
 
     ItemCardapioEntityMapper INSTANCE = Mappers.getMapper(ItemCardapioEntityMapper.class);
 
+    @Mapping(source = "restauranteId", target = "restaurante.id")
     ItemCardapioEntity toItemCardapioEntity(ItemCardapioDomain itemCardapioDomain);
 
+    @Mapping(source = "restaurante.id", target = "restauranteId")
     ItemCardapioDomain toItemCardapioDomain(ItemCardapioEntity itemCardapioEntity);
 }
